RESOLVED FIXED283720
[Ruby] Incorrect min-content size when when base is followed by a breaking position
https://bugs.webkit.org/show_bug.cgi?id=283720
Summary [Ruby] Incorrect min-content size when when base is followed by a breaking po...
alan
Reported 2024-11-26 09:02:53 PST
and wide annotation
Attachments
[fast-cq]Patch (7.59 KB, patch)
2024-11-26 09:10 PST, alan
no flags
alan
Comment 1 2024-11-26 09:10:56 PST
Created attachment 473377 [details] [fast-cq]Patch
EWS
Comment 2 2024-11-26 12:24:34 PST
Committed 287102@main (bcd25fbe7e20): <https://commits.webkit.org/287102@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 473377 [details].
Radar WebKit Bug Importer
Comment 3 2024-11-26 12:25:17 PST
Note You need to log in before you can comment on or make changes to this bug.