[Ruby] Incorrect min-content size when when base is followed by a breaking position https://bugs.webkit.org/show_bug.cgi?id=283720

Reviewed by Antti Koivisto.

When base is followed by a breaking position, we declare the "current line" done (by setting inlineMin to 0) and adjusting the global minimum width (minLogicalWidth).
Now when we find the associated annotation box (after ruby base), we have to check if the "line" is done and adjust the appropriate variable accordingly
(inlineMin vs. minLogicalWidth).

1. Add RubyBaseContent struct so that we can track if we are done with the current "line" (hasBreakingPositionAfter).
2. Use hasBreakingPositionAfter to decide whether we should adjust the inlineMin (which represents the current "line's" current minimum width)
or minLogicalWidth (which represents the global minimum width)

* LayoutTests/fast/ruby/base-followed-by-breaking-position-with-wide-annotation-expected.html: Added.
* LayoutTests/fast/ruby/base-followed-by-breaking-position-with-wide-annotation.html: Added.
* Source/WebCore/rendering/RenderBlockFlow.cpp:
(WebCore::RenderBlockFlow::computeInlinePreferredLogicalWidths const):

Canonical link: https://commits.webkit.org/287102@main